[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/objects/Countdown.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/Window.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/DangerSign.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/actors/Spaceman.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/objects/Bed.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/objects/Computer.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/objects/WaterCooler.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/levels/WinLoseScreen.gd" type="Script" id=8]
[ext_resource path="res://src/levels/ship_tileset.tres" type="TileSet" id=9]
[ext_resource path="res://src/levels/Terminal.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/levels/Ship.gd" type="Script" id=11]

[node name="Ship" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_horizontal_guides_": [ 79.8265, -74.903, -63.4888, -15.9868 ],
"_edit_vertical_guides_": [ -64.161, 191.492, -15.4591, 143.888 ]
}

[node name="Window" parent="." instance=ExtResource( 2 )]
pause_mode = 2
position = Vector2( -16.0429, -63.9339 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 1, 0, -327669, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 1, 0, 11, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 1, 0, 65547, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1, 0, 131083, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 1, 0, 196619, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0 )

[node name="Countdown" parent="." instance=ExtResource( 1 )]
pause_mode = 2
position = Vector2( 127.555, -8.45992 )

[node name="DangerSign" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="YSort" type="YSort" parent="."]

[node name="Spaceman" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 0, 0.184738 )

[node name="Bed" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 47.7165, 56.3991 )

[node name="WaterCooler" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -23.8392, 34.6743 )

[node name="Computer" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 64.393, 9.00772 )

[node name="Terminal" parent="." instance=ExtResource( 10 )]
visible = false

[node name="WinLoseScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="WinLoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -79.0
margin_right = 153.0
margin_bottom = 42.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLose" type="Label" parent="WinLoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.956924
margin_top = -32.9156
margin_right = 103.957
margin_bottom = -1.9156
text = "Congratulations!
You win"
align = 1
[connection signal="move_meteor" from="Countdown" to="." method="_on_Countdown_move_meteor"]
[connection signal="times_up" from="Countdown" to="." method="_on_Countdown_times_up"]
[connection signal="boot_pc" from="YSort/Computer" to="." method="_on_Computer_boot_pc"]
[connection signal="disconnect" from="Terminal" to="." method="_on_Terminal_disconnect"]
[connection signal="fire_laser" from="Terminal" to="." method="_on_Terminal_fire_laser"]
